--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
-
+    
     <title>Vue JS</title>
 </head>
 <body>
@@ -17,8 +18,13 @@
                 <p v-on:click="logFruit">{{fruit.name}} is  {{fruit.flavour}}</p>
             </li>
         </ul>
-        <a :href="targetURL" target="_blank">{{ targetURL }}</a>
+        <a :class="{ 'no-decorate' : anchorOff }" :href="targetURL" target="_blank">{{ targetURL }}</a>
+        <p v-if="hazVue">
+            {{vuemessage}}
+        </p>
     </main>
+    <footer id="footer">{{ footermessage }}</footer>
+    
     <script src="js/min.js"></script>
 </body>
 </html>
